--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,5 @@
 # ("mongodb+srv://Omar:18PWcse16630316@cluster0.qxgva.mongodb.net/?retryWrites=true&w=majority");
 # LOCAL_DB = "mongodb://localhost:27017/todo-app";
 
+SECRET = "THISISTHESECRET";
 DB_URL = mongodb+srv://Omar:18PWcse16630316@cluster0.qxgva.mongodb.net/?retryWrites=true&w=majority;
